# switch_ai

./: .gitignore  CMakeLists.txt  README.md  load_config_sample.cmake  test_offline_training.py  test_online_training.py  train_and_test.py
nnSolver/include/: DataManager.h  nnSolver.h
nnSolver/src/: DataManager.cpp  nnSolver.cpp  nnSolver_backup.cpp  test_data_manager.cpp  test_python_training.cpp
py_solver/: __init__.py  config.py  data_manager.py  dnn.py  inference.py  launch.py  model_factory.py  model_manager.py  pipeline_manager.py
test_output_20250804_185324/: config.json  model_registry.json  test_offline_model.onnx  test_offline_model.pt
